@@ -11,7 +11,9 @@ SQLObject 1.2.3
 ===============
 
 * Fixed a minor bug in PostgreSQL introspection: VIEWs don't have
-  PRIMARY KEYs - use sqlmeta.idName as the key if there is no one.
+  PRIMARY KEYs - use sqlmeta.idName as the key.
+
+* Fixed a bug in cache handling while unpickling.
 
 SQLObject 1.2.2
 ===============
